--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,7 +4,7 @@ spring:
     url: jdbc:h2:mem:/test_tp_db
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
 
   mail:
     host: smtp.gmail.com
