--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:/tp_db
+    url: jdbc:h2:mem:/test_tp_db
   jpa:
     hibernate:
       ddl-auto: create-drop
