--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -26,7 +26,7 @@ logging:
       springframework:
         security: DEBUG
 base:
-  url: https://${NGROK_ID}.ngrok-free.app
+  url: https://testpool-app-3g73f.ondigitalocean.app/
 
 myapp:
   maxPoints: 10
